--- a/about/index.html
+++ b/about/index.html
@@ -29,13 +29,13 @@
 <h1>About the Big Car Count<image src="/images/icon_40.jpg" style="height:30px; width:30px;" alt="logo"></image></h1>
 
 <p>This app is part of the <a href="https://environment.leeds.ac.uk/dir-record/research-projects/1794/cars-connecting-administrative-vehicle-data-for-research-on-sustainable-transport">Connecting Administrative vehicle data for Research on Sustainable Transport</a> (CARS) research project.</p>
-<p>The project aims to understand how vehicles are used in the UK and provide better evidence to address a range of issues such as air pollution, congestion, climate change and more.  While we know much about vehicles in the UK a crucial missing piece of information is where the "live". </p>
+<p>The project aims to understand how vehicles are used in the UK and provide better evidence to address a range of issues such as air pollution, congestion, climate change and more.  While we know much about vehicles in the UK a crucial missing piece of information is where they "live". </p>
 <p>This app is intended to help build a crowd-sourced survey of the home locations of vehicles across the UK. Knowing a vehicle's home location enables a wide range of research for the public good.</p>
 
 <h1>Consent to participate in the survey</h1>
 <p>By submitting responses to the survey you are consenting to participate in the survey. See the <a href="/about/consent">consent form</a> for more information.
 <h2>How to use this app</h2>
-<p>You will need to give the app permission to access your location. If the app does no know your location you will see a “please share your location” button at the bottom of the survey.</p>
+<p>You will need to give the app permission to access your location. If the app does not know your location you will see a “please share your location” button at the bottom of the survey.</p>
 <p>Type in the number plate of any parked vehicles you see and click the button that best describes where it is parked (e.g. Drive, Road, Pavement). If your observation has been successfully summited, a green tick will flash up on the right side of the yellow number plate box.</p>
 <h2>App Icons</h2>
 <p>These icons will appear in the yellow number plate box.</p>
