--- a/about/index.html
+++ b/about/index.html
@@ -112,6 +112,7 @@
 <p>Data will be securely stored at the University of Leeds and only anonymised data will be published via the UK Data Service.</p> 
 
 <h2>Attribution</h2>
+<p>Icons used in the site</p>
 <p><a href="https://loading.io/license">icon 'ninja' from loading.io</a></p>
 
 </div>  
